# PubMedAI

./: .gitignore  README.md  config.py  notes.txt  pyproject.toml
app/: main.py
app/core/: diagnosis_assistance.py  document_processor.py  pubmed_fetcher.py  rag_pipeline.py
app/core/context_engineering/: context_engineer.py
app/core/prompt_engineering/: prompt_engineer.py  prompt_memory.py  prompt_template.py
app/model/: context_model.py  prompt_model.py
app/utils/: helper.py  logger.py
shared/: logger.py
